fix: missing color changes

--- a/src/layouts/Base/variables.css
+++ b/src/layouts/Base/variables.css
@@ -26,14 +26,14 @@
 	--surface-1: var(--gray-4);
 
 	--link: maroon;
-	--title-color: rgb(255, 193, 36);
+	--title-color: rgb(255 193 36);
 
 	accent-color: var(--theme-color);
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--link: rgb(255, 59, 59);
+		--link: rgb(255 59 59);
 		--title-color: var(--yellow-6);
 		--surface-1: var(--gray-9);
 	}
